[package]
name = "ascendcl"
description = "Safe AscendCL Runtime API."
version = "0.0.0"
edition = "2021"
authors = ["YdrMaster <ydrml@hotmail.com>"]
repository = "https://github.com/InfiniTensor/ascendcl.git"
documentation = "https://docs.rs/ascendcl"
license = "MIT"
readme = "README.md"
keywords = ["ascend", "ascendcl"]
categories = ["hardware-support"]

[dependencies]
context-spore = "0.0"
log = "0.4"

[build-dependencies]
bindgen.workspace = true
build-script-cfg.workspace = true
search-ascend-tools = { version = "0.0", path = "../search-ascend-tools" }

[dev-dependencies]
rand = "0.8"
