[package]
name = "search-ascend-tools"
description = "Crate for searching Ascend tools"
version = "0.0.0"
edition = "2021"
authors = ["YdrMaster <ydrml@hotmail.com>"]
repository = "https://github.com/InfiniTensor/ascendcl.git"
documentation = "https://docs.rs/search-ascend-tools"
license = "MIT"
readme = "README.md"
keywords = ["ascend", "ascendcl", "cann", "bisheng", "build-script"]
categories = ["development-tools::build-utils"]
